@@ -1071,9 +1071,4 @@ test-xfail-tst-backtrace6 = yes
 test-xfail-tst-mqueue5 = yes
 test-xfail-tst-platform-1 = yes
 test-xfail-tst-waitid = yes
-
-# This is a kernel bug in the compat layer. See:
-# https://patchwork.kernel.org/patch/10716699
-test-xfail-tst-preadvwritev2 = yes
-test-xfail-tst-preadvwritev64v2 = yes
 endif
