@@ -57,6 +57,8 @@ glibc (2.29-0experimental0) UNRELEASED; urgency=medium
   * debian/rules: do not export SHELL, it is already set through configparms.
   * debian/patches/git-pexpect-pretty-printers.diff: backport pretty printer
     fix to support recent versions of GDB with color output.
+  * debian/testsuite-xfail-debian.mk: drop XFAILs that were due to kernel bugs
+    which are now fixed in both oldstable and stable kernels.
 
  -- Adam Conrad <adconrad@0c3.net>  Wed, 20 Feb 2019 01:22:52 -0700
 
